[package]
name = "mrktpltsbot"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
categories = ["command-line-utilities"]
description = "Marktplaats search notifications in Telegram (unofficial)"
edition = "2024"
keywords = ["marktplaats", "telegram"]
license = "MIT"
publish = true
readme = "README.md"
repository = "https://github.com/eigenein/mrktpltsbot"
version = "2.0.1"
rust-version = "1.86"

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/mrktpltsbot" }
is-it-maintained-open-issues = { repository = "eigenein/mrktpltsbot" }

[profile.release]
codegen-units = 1
lto = "thin"

[lints.rust]
async_fn_in_trait = "allow"

[lints.clippy]

# Categories:
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Individual flags:
future_not_send = "allow"
ignored_unit_patterns = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
significant_drop_tightening = "allow"

[dependencies]
anyhow = { version = "=1.0.98", features = ["backtrace"] }
base64-url = "=3.0.0"
bon = "=3.6.3"
chrono = "=0.4.38"
clap = { version = "=4.5.37", features = ["cargo", "derive", "env", "unicode"] }
dotenvy = "=0.15.7"
maud = "=0.27.0"
monostate = "=0.1.14"
reqwest = { version = "=0.12.9", default-features = false, features = ["cookies", "gzip", "http2", "json", "rustls-tls"] }
reqwest-middleware = { version = "0.4.2", features = ["http2", "json", "rustls-tls"] }
reqwest-tracing = "0.5.7"
prost = "=0.13.5"
rust_decimal = "=1.37.1"
rust_decimal_macros = "=1.37.1"
seahash = "=4.1.0"
secrecy = { version = "=0.10.3", features = ["serde"] }
sentry = { version = "=0.37.0", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = "=1.0.219"
serde_json = "=1.0.140"
serde_qs = "=0.15.0"
sqlx = { version = "=0.8.5", features = ["chrono", "migrate", "runtime-tokio", "sqlite"] }
sqlx-sqlite = "=0.8.5"
tokio = { version = "=1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tracing = "=0.1.41"
tracing-appender = "=0.2.3"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
url = "=2.5.4"
